--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 
 sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
 
-version = "1.2.0"
+version = "2.0.0"
 group = "team.covertdragon"
 archivesBaseName = "MooncakeCraft"
 
@@ -36,7 +36,7 @@ repositories {
 }
 
 minecraft {
-    version = "1.12.2-14.23.4.2750"
+    version = "1.12.2-14.23.5.2836"
     runDir = "run"
 
     mappings = "stable_39"
@@ -45,11 +45,12 @@ minecraft {
 }
 
 dependencies {
-    compile "mezz.jei:jei_1.12.2:4.12.0.215"
+    compile "mezz.jei:jei_1.12.2:4.13.1.220"
 
-    deobfCompile "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.9.6"
-    deobfCompile "CraftTweaker2:CraftTweaker2-API:4.1.9.6"
-    deobfCompile "CraftTweaker2:ZenScript:4.1.9.6"
+    deobfCompile("CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.9.6") {
+        exclude group: 'org.ow2.asm'
+        exclude group: 'com.google.code.gson'
+    }
 }
 
 processResources {
